--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,21 @@
 [project]
 name = "drone-object-detection"
 version = "0.1.0"
-description = "Real-time object detection for drone applications using RT-DETR"
+description = "Real-time object detection for autonomous drones"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.8"
 dependencies = [
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
-    "transformers>=4.35.0",
-    "pillow>=10.0.0",
+    "ultralytics>=8.0.0",
     "opencv-python>=4.8.0",
     "numpy>=1.24.0",
 ]
 
-[dependency-groups]
-dev = [
-    "pytest>=7.4.0",
-    "black>=23.0.0",
-    "ruff>=0.1.0",
-]
+[project.scripts]
+detect = "detector.detect:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/drone_object_detection"]
+packages = ["src/detector"]
